@@ -55,6 +55,7 @@ sub TestImplementation
         'file_handle' => undef,
         'enable_cache' => $enable_cache,
         'enable_grep' => $enable_grep,
+        'debug' => $ENV{TEST_VERBOSE},
       } );
 
   die $folder_reader unless ref $folder_reader;
